# better_stdin

./: Cargo.toml  README.md
src/: lib.rs
