[package]
name = "better_stdin"
version = "0.1.2"
edition = "2024"
authors = [ "Poroslav <poroslavdev@gmail.com>" ]
license = "MIT"
description = "Simple-to-use and lightweight input lib"
repository = "https://github.com/Poroslav/better_stdin"
readme = "README.md"
keywords = [ "python", "utils", "io" ]

[dependencies]
